--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,10 @@ body {
   }
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 header {
   position: sticky;
   top: -10px;
@@ -521,6 +525,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   color: #fff;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #banner {
   background: #1d4b67;
   background: linear-gradient(0deg, #1d4b67 29%, #06273c 91%);
@@ -629,6 +637,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   border: 1px solid #f2e933;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #about {
   position: relative;
 }
@@ -707,6 +719,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   }
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #Team .container .abt_self .name {
   font-size: 36px;
   line-height: 38px;
@@ -720,6 +736,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   color: #073a59;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #gallery {
   background-color: #f4fbff;
 }
@@ -765,6 +785,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   background: linear-gradient(90deg, #d2b32d 0%, #f2e933 100%);
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 .mix {
   display: inline-block;
   vertical-align: top;
@@ -866,6 +890,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   }
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #services {
   position: relative;
 }
@@ -1087,6 +1115,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   margin: 10px 0px;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #client .container .client_boxs {
   margin: 60px 0px;
   overflow: visible !important;
@@ -1170,6 +1202,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   }
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #work {
   background-color: #fbfbfb;
 }
@@ -1200,6 +1236,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   color: #073a59;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #request {
   background-color: #cfae2c;
   color: #fff;
@@ -1242,6 +1282,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   font-family: Fira_semi_bold;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #quote form textarea {
   border: 1px solid #ddd;
 }
@@ -1283,6 +1327,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   background: linear-gradient(90deg, #d2b32d 0%, #f2e933 100%);
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 .counter_inner {
   justify-content: center;
 }
@@ -1318,6 +1366,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   text-transform: capitalize;
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 #price .container .price_container .col-8 {
   padding: 0 !important;
   padding-right: 4px !important;
@@ -1437,6 +1489,10 @@ header .navbar .container .navbar-collapse .form-inline .btn:hover {
   }
 }
 
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 footer {
   background: url("../img/footer/footer_bg.png") center center/cover no-repeat;
   position: relative;
@@ -1612,4 +1668,9 @@ footer .container .bottom .policy li a {
 footer .container .bottom .policy li a:hover {
   text-decoration: underline;
 }
+
+/* === For Small Device ( 0px - 767px) == */
+/* === For Extra small Device ( 320px - 575px) == */
+/* === For Medium Device ( 768px - 1023px) == */
+/* === For Large Device ( 1024px - 1200px) == */
 /*# sourceMappingURL=style.css.map */
