--- a/assets/scss/section/_header.scss
+++ b/assets/scss/section/_header.scss
@@ -1,26 +1,24 @@
-header{
+header {
     position: sticky;
     top: -10px;
     z-index: 9999;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.253);
-    .navbar{
-        .container{
-            .navbar-brand{
-               
+    .navbar {
+        .container {
+            .navbar-brand {
             }
-            .navbar-collapse{
-    
-                .navbar-nav{
-                    @media(max-width: 1199px) {
+            .navbar-collapse {
+                .navbar-nav {
+                    @media (max-width: 1199px) {
                         text-align: center;
                     }
-                    .nav-item{
+                    .nav-item {
                         position: relative;
                         margin: 0px 12px;
-                        @media(max-width: 1600px) {
-                       margin: 0px 2px;
+                        @media (max-width: 1600px) {
+                            margin: 0px 2px;
                         }
-                        &::after{
+                        &::after {
                             content: '';
                             position: absolute;
                             left: 0;
@@ -30,43 +28,40 @@ header{
                             background-color: #073a59;
                             transition: all 0.2s linear;
                         }
-                      &:last-child{
-                       background-color: #073a59;
-                       border: none;
-                       .nav-link{
-                           color: #ddd;
-                       }
-                        &::after{
-                         width: 0px;
-                         height: 0px;
+                        &:last-child {
+                            background-color: #073a59;
+                            border: none;
+                            .nav-link {
+                                color: #ddd;
+                            }
+                            &::after {
+                                width: 0px;
+                                height: 0px;
+                            }
                         }
-                       
-                      }
-    
-                      &.active{
-                        @media (max-width: 1199px) {
-                            background: #ddd;
-                        }
-                          &::after{
-                              width: 100%;
-                          }
-    
-                          
-                      }
-                        &:hover{
+
+                        &.active {
                             @media (max-width: 1199px) {
-                                background-color: #ddd;
-                            }   
-                            // background-color: #ddd;
-                            &::after{
+                                background: #ddd;
+                            }
+                            &::after {
                                 width: 100%;
                             }
-                           &:last-child{
-                               background-color: #073a59;
-                           }
                         }
-    
-                        .nav-link{
+                        &:hover {
+                            @media (max-width: 1199px) {
+                                background-color: #ddd;
+                            }
+                            // background-color: #ddd;
+                            &::after {
+                                width: 100%;
+                            }
+                            &:last-child {
+                                background-color: #073a59;
+                            }
+                        }
+
+                        .nav-link {
                             font-size: 16px;
                             line-height: 20px;
                             color: #1b3872;
@@ -75,29 +70,43 @@ header{
                         }
                     }
                 }
-    
-                .form-inline{
-                    @media(max-width:1199px) {
+
+                .form-inline {
+                    @media (max-width: 1199px) {
                         display: flex;
                         align-items: center;
                         justify-content: center;
                     }
-                    .form-control{
+                    .form-control {
                         border: none;
                         background-color: transparent;
                         outline: none;
                         @media (max-width: 1199px) {
-                            flex: 1;   
+                            flex: 1;
                         }
                     }
-                    .btn{
-                       &:hover{
-                        background-color: #073a59;
-                        color: #fff;
-                       }
+                    .btn {
+                        &:hover {
+                            background-color: #073a59;
+                            color: #fff;
+                        }
                     }
                 }
             }
         }
     }
+}
+
+// Responsive
+/* === For Small Device ( 0px - 767px) == */
+@include small {
+}
+/* === For Extra small Device ( 320px - 575px) == */
+@include ex_small {
+}
+/* === For Medium Device ( 768px - 1023px) == */
+@include medium {
+}
+/* === For Large Device ( 1024px - 1200px) == */
+@include large {
 }
